--- a/GTY/appsettings.json
+++ b/GTY/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DataBase": "Server=DESKTOP-A908KQQ\\SQLEXPRESS;Database=OxeSistem;Integrated Security=True;TrustServerCertificate=True;"
+  },
   "AllowedHosts": "*"
+  //Server=DESKTOP-A908KQQ\\SQLEXPRESS;Database=OxeSistem;Integrated Security=True;
 }
